--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     "react-dom": "https://esm.sh/react-dom@18.2.0",
     "lucide-react": "https://esm.sh/lucide-react@0.263.1?external=react",
     "recharts": "https://esm.sh/recharts@2.12.0?external=react,react-dom",
+    "@google/genai": "https://esm.sh/@google/genai",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
     "react/": "https://aistudiocdn.com/react@^19.2.1/"
   }
