--- a/index.html
+++ b/index.html
@@ -5,6 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GadgetShob E-Commerce</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        darkMode: 'class',
+        theme: {
+          extend: {
+            colors: {
+              // Mapping 'green' to Primary (Action Color)
+              green: {
+                50: 'rgba(var(--color-primary-rgb), 0.1)',
+                100: 'rgba(var(--color-primary-rgb), 0.2)',
+                200: 'rgba(var(--color-primary-rgb), 0.3)',
+                500: 'rgba(var(--color-primary-rgb), 1)',
+                600: 'rgba(var(--color-primary-rgb), 0.9)',
+                700: 'rgba(var(--color-primary-rgb), 0.8)',
+              },
+              // Mapping 'pink' to Secondary (Brand/Highlight Color)
+              pink: {
+                50: 'rgba(var(--color-secondary-rgb), 0.1)',
+                100: 'rgba(var(--color-secondary-rgb), 0.2)',
+                500: 'rgba(var(--color-secondary-rgb), 1)',
+                600: 'rgba(var(--color-secondary-rgb), 0.9)',
+              },
+              // Mapping 'purple' to Tertiary (Accent/Deep Color)
+              purple: {
+                50: 'rgba(var(--color-tertiary-rgb), 0.1)',
+                100: 'rgba(var(--color-tertiary-rgb), 0.2)',
+                200: 'rgba(var(--color-tertiary-rgb), 0.3)',
+                500: 'rgba(var(--color-tertiary-rgb), 0.8)',
+                600: 'rgba(var(--color-tertiary-rgb), 1)',
+                700: 'rgba(var(--color-tertiary-rgb), 0.9)',
+                900: 'rgba(var(--color-tertiary-rgb), 0.6)',
+              }
+            }
+          }
+        }
+      }
+    </script>
     <script type="importmap">
 {
   "imports": {
@@ -20,6 +57,11 @@
 }
 </script>
     <style>
+      :root {
+        --color-primary-rgb: 34, 197, 94; /* Default Green-500 */
+        --color-secondary-rgb: 236, 72, 153; /* Default Pink-500 */
+        --color-tertiary-rgb: 147, 51, 234; /* Default Purple-600 */
+      }
       .scrollbar-hide::-webkit-scrollbar {
           display: none;
       }
