--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         theme: {
           extend: {
             colors: {
-              // Mapping 'green' to Primary (Action Color)
+              // Mapping 'green' to Primary (Action Color) - NOW PINK
               green: {
                 50: 'rgba(var(--color-primary-rgb), 0.1)',
                 100: 'rgba(var(--color-primary-rgb), 0.2)',
@@ -21,14 +21,14 @@
                 600: 'rgba(var(--color-primary-rgb), 0.9)',
                 700: 'rgba(var(--color-primary-rgb), 0.8)',
               },
-              // Mapping 'pink' to Secondary (Brand/Highlight Color)
+              // Mapping 'pink' to Secondary (Brand/Highlight Color) - NOW PURPLE
               pink: {
                 50: 'rgba(var(--color-secondary-rgb), 0.1)',
                 100: 'rgba(var(--color-secondary-rgb), 0.2)',
                 500: 'rgba(var(--color-secondary-rgb), 1)',
                 600: 'rgba(var(--color-secondary-rgb), 0.9)',
               },
-              // Mapping 'purple' to Tertiary (Accent/Deep Color)
+              // Mapping 'purple' to Tertiary (Accent/Deep Color) - NOW FUCHSIA
               purple: {
                 50: 'rgba(var(--color-tertiary-rgb), 0.1)',
                 100: 'rgba(var(--color-tertiary-rgb), 0.2)',
@@ -54,17 +54,18 @@
     "@google/genai": "https://esm.sh/@google/genai",
     "firebase/app": "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js",
     "firebase/firestore": "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js",
-    "react/": "https://aistudiocdn.com/react@^19.2.1/",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
+    "react/": "https://aistudiocdn.com/react@^19.2.1/",
     "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/"
   }
 }
 </script>
     <style>
       :root {
-        --color-primary-rgb: 34, 197, 94; /* Default Green-500 */
-        --color-secondary-rgb: 236, 72, 153; /* Default Pink-500 */
-        --color-tertiary-rgb: 147, 51, 234; /* Default Purple-600 */
+        /* Pink Vibe Theme */
+        --color-primary-rgb: 236, 72, 153; /* Pink-500 */
+        --color-secondary-rgb: 168, 85, 247; /* Purple-500 */
+        --color-tertiary-rgb: 192, 38, 211; /* Fuchsia-600 */
       }
       .scrollbar-hide::-webkit-scrollbar {
           display: none;
@@ -83,4 +84,3 @@
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
-    
