--- a/index.html
+++ b/index.html
@@ -14,11 +14,8 @@
     "lucide-react": "https://esm.sh/lucide-react@0.263.1?external=react",
     "recharts": "https://esm.sh/recharts@2.12.0?external=react,react-dom",
     "@google/genai": "https://esm.sh/@google/genai",
-    "firebase/app": "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js",
-    "firebase/firestore": "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "react/": "https://aistudiocdn.com/react@^19.2.1/",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/"
+    "react/": "https://aistudiocdn.com/react@^19.2.1/"
   }
 }
 </script>
