--- a/index.html
+++ b/index.html
@@ -24,16 +24,41 @@
     <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"></noscript>
     <!-- Critical inline styles -->
     <style>
-      *{box-sizing:border-box}body{margin:0;background:#0a0a0a}#root{min-height:100vh}.il{display:flex;flex-direction:column;align-items:center;justify-content:center;min-height:100vh}.il svg{width:60px;height:60px;margin-bottom:32px;animation:p 2s infinite}.pb{width:120px;height:3px;background:#fff1;border-radius:3px;overflow:hidden}.pb div{height:100%;background:#fff;animation:l 1.5s infinite}@keyframes p{50%{opacity:.7;transform:scale(.98)}}@keyframes l{0%{width:0}50%{width:80%}to{width:80%;margin-left:100%}}
+      *{box-sizing:border-box}body{margin:0}#root{min-height:100vh}#initial-loader{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:#000;z-index:9999}.lc{position:relative;width:200px;height:200px}.lg{position:absolute;inset:0;border-radius:50%;background:rgba(34,211,238,0.2);filter:blur(20px);animation:p 2s infinite}.lr{position:absolute;inset:0;border-radius:50%;border:6px solid #22d3ee;box-shadow:0 0 40px rgba(34,211,238,0.6),0 0 80px rgba(34,211,238,0.4),inset 0 0 40px rgba(34,211,238,0.2)}.li{position:absolute;inset:20px;border-radius:50%;background:rgba(0,0,0,0.8)}.ld{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;gap:12px}.dt{width:12px;height:12px;border-radius:50%;background:rgba(34,211,238,0.6);box-shadow:0 0 10px rgba(34,211,238,0.8);animation:dp 1.4s ease-in-out infinite}.dt:nth-child(2){animation-delay:0.2s}.dt:nth-child(3){animation-delay:0.4s}@keyframes p{50%{opacity:.7}}@keyframes dp{0%,100%{opacity:0.4;transform:scale(0.8)}50%{opacity:1;transform:scale(1.2)}}
     </style>
   </head>
   <body>
-    <div id="root">
-      <div class="il">
-        <svg viewBox="0 0 48 48" fill="none"><circle cx="24" cy="12" r="4" fill="#fff"/><circle cx="24" cy="24" r="4" fill="#fff"/><circle cx="24" cy="36" r="4" fill="#fff"/><circle cx="16" cy="18" r="3" fill="#fff" opacity=".6"/><circle cx="32" cy="18" r="3" fill="#fff" opacity=".6"/><circle cx="16" cy="30" r="3" fill="#fff" opacity=".6"/><circle cx="32" cy="30" r="3" fill="#fff" opacity=".6"/></svg>
-        <div class="pb"><div></div></div>
+    <div id="initial-loader">
+      <div class="lc">
+        <div class="lg"></div>
+        <div class="lr"></div>
+        <div class="li"></div>
+        <div class="ld">
+          <div class="dt"></div>
+          <div class="dt"></div>
+          <div class="dt"></div>
+        </div>
       </div>
     </div>
+    <div id="root"></div>
+    <script>
+      // Remove loader when React mounts
+      window.addEventListener('DOMContentLoaded', function() {
+        var checkRoot = setInterval(function() {
+          if (document.getElementById('root').children.length > 0) {
+            var loader = document.getElementById('initial-loader');
+            if (loader) loader.remove();
+            clearInterval(checkRoot);
+          }
+        }, 100);
+        // Fallback: remove after 5s max
+        setTimeout(function() {
+          var loader = document.getElementById('initial-loader');
+          if (loader) loader.remove();
+          clearInterval(checkRoot);
+        }, 5000);
+      });
+    </script>
     <script type="module" src="/entry-client.tsx"></script>
     <!-- Register Service Worker -->
     <script>
