--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://systemnextit.com" crossorigin>
+    <link rel="preconnect" href="https://images.unsplash.com" crossorigin>
     <link rel="dns-prefetch" href="https://systemnextit.com">
     <link rel="dns-prefetch" href="https://images.unsplash.com">
     <!-- Defer font loading to prevent render blocking -->
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"></noscript>
+    <link rel="preload" as="image" href="/icons/icon-192x192.png">
     <style>
       /* Critical CSS - inlined for instant first paint */
       *,*::before,*::after{box-sizing:border-box}
