--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OPBD - E-Commerce</title>
+    <title>SystemNext IT - E-Commerce</title>
     <meta name="description" content="Your one-stop shop for electronics and gadgets">
     <meta name="theme-color" content="#ec4899">
     <meta name="mobile-web-app-capable" content="yes">
