--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <meta name="apple-mobile-web-app-title" content="OPBD">
     <link rel="manifest" href="/manifest.json">
     <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
+    <!-- Preconnect to API server - critical for fast data loading -->
+    <link rel="preconnect" href="https://api.systemnextit.com" crossorigin>
+    <link rel="dns-prefetch" href="https://api.systemnextit.com">
     <!-- Preconnect to critical origins -->
     <link rel="preconnect" href="https://systemnextit.com" crossorigin>
     <link rel="dns-prefetch" href="https://systemnextit.com">
