Add Super Admin Dashboard with modern UI

--- a/pages/promoPage/index.html
+++ b/pages/promoPage/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="সেলইকম - বাংলাদেশের সেরা ই-কমার্স প্ল্যাটফর্ম। সুপার-ফাস্ট লোড টাইম, মোবাইল ফ্রেন্ডলি UI, ফেসবুক পিক্সেল ইন্টিগ্রেশন।">
-    <meta name="keywords" content="ই-কমার্স, অনলাইন স্টোর, বাংলাদেশ, সেলইকম">
-    <title>সেলইকম - আপনার ব্যবসার সঠিক সল্যুশন</title>
+    <meta name="description" content="SystemNext IT - বাংলাদেশের সেরা ই-কমার্স প্ল্যাটফর্ম। সুপার-ফাস্ট লোড টাইম, মোবাইল ফ্রেন্ডলি UI, ফেসবুক পিক্সেল ইন্টিগ্রেশন।">
+    <meta name="keywords" content="ই-কমার্স, অনলাইন স্টোর, বাংলাদেশ, SystemNext IT">
+    <title>SystemNext IT - আপনার ব্যবসার সঠিক সল্যুশন</title>
     
     <!-- Preconnect for faster font loading -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -44,7 +44,7 @@
                         <path d="M2 12L12 17L22 12" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                 </div>
-                <span class="logo-text">সেলইকম</span>
+                <span class="logo-text">SystemNext IT</span>
             </div>
             <div class="nav-links">
                 <a href="#features">ফিচার</a>
@@ -248,20 +248,20 @@
                 <div class="faq-list">
                     <div class="faq-item">
                         <button class="faq-question">
-                            <span>সেলইকম কী?</span>
+                            <span>SystemNext IT কী?</span>
                             <span class="faq-icon">+</span>
                         </button>
                         <div class="faq-answer">
-                            <p>সেলইকম হলো বাংলাদেশের সবচেয়ে আধুনিক ই-কমার্স প্ল্যাটফর্ম যা আপনাকে সহজেই অনলাইন স্টোর তৈরি ও পরিচালনা করতে সাহায্য করে।</p>
+                            <p>SystemNext IT হলো বাংলাদেশের সবচেয়ে আধুনিক ই-কমার্স প্ল্যাটফর্ম যা আপনাকে সহজেই অনলাইন স্টোর তৈরি ও পরিচালনা করতে সাহায্য করে।</p>
                         </div>
                     </div>
                     <div class="faq-item">
                         <button class="faq-question">
-                            <span>সেলইকম দিয়ে ই-কমার্স স্টোর খুলতে কি সফটওয়্যার ডেভেলপারের সাহায্য প্রয়োজন হয়?</span>
+                            <span>SystemNext IT দিয়ে ই-কমার্স স্টোর খুলতে কি সফটওয়্যার ডেভেলপারের সাহায্য প্রয়োজন হয়?</span>
                             <span class="faq-icon">+</span>
                         </button>
                         <div class="faq-answer">
-                            <p>না, সেলইকম সম্পূর্ণ নো-কোড প্ল্যাটফর্ম। আপনি কোনো কোডিং জ্ঞান ছাড়াই মিনিটের মধ্যে আপনার স্টোর তৈরি করতে পারবেন।</p>
+                            <p>না, SystemNext IT সম্পূর্ণ নো-কোড প্ল্যাটফর্ম। আপনি কোনো কোডিং জ্ঞান ছাড়াই মিনিটের মধ্যে আপনার স্টোর তৈরি করতে পারবেন।</p>
                         </div>
                     </div>
                     <div class="faq-item">
@@ -279,7 +279,7 @@
                             <span class="faq-icon">+</span>
                         </button>
                         <div class="faq-answer">
-                            <p>না, সেলইকম প্যাকেজের সাথে হোস্টিং অন্তর্ভুক্ত। আপনাকে আলাদা কোনো হোস্টিং কিনতে হবে না।</p>
+                            <p>না, SystemNext IT প্যাকেজের সাথে হোস্টিং অন্তর্ভুক্ত। আপনাকে আলাদা কোনো হোস্টিং কিনতে হবে না।</p>
                         </div>
                     </div>
                     <div class="faq-item">
@@ -389,7 +389,7 @@
 
     <div class="chat-widget hidden" id="chat-widget">
         <div class="chat-header">
-            <h4><span class="online-dot"></span> সেলইকম সাপোর্ট</h4>
+            <h4><span class="online-dot"></span> SystemNext IT সাপোর্ট</h4>
             <button class="chat-close" id="chat-close">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M18 6L6 18M6 6l12 12"/>
