--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>SystemNext IT</title>
     <meta name="theme-color" content="#E91E8C">
     <link rel="icon" type="image/png" href="/icons/icon-32x32.png">
+    
+    <!-- DNS Prefetch & Preconnect for faster external connections -->
+    <link rel="dns-prefetch" href="//fonts.googleapis.com">
+    <link rel="dns-prefetch" href="//fonts.gstatic.com">
+    <link rel="dns-prefetch" href="//static.systemnextit.com">
+    <link rel="dns-prefetch" href="//images.systemnextit.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://static.systemnextit.com" crossorigin>
+    <link rel="preconnect" href="https://images.systemnextit.com" crossorigin>
+    
+    <!-- Preload critical fonts (if using Google Fonts) -->
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"></noscript>
     <style>
       *{box-sizing:border-box}body{margin:0;font-family:system-ui,-apple-system,sans-serif;background:#f9fafb}
       @keyframes pulse{0%,100%{opacity:1}50%{opacity:.5}}
